Login by name: view is chanched only.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -1,31 +1,25 @@
 {
-    "Authorization": "Вхід",
     "Characteristics": "Характеристики",
     "Cause": "Причина",
     "Comment": "Коментар",
     "Date": "Дата",
     "Devices": "Пристрої",
-    "Forgot your password?": "Забули пароль?",
     "Ident. №": "Ідент. №",
     "Identification code": "Ідентифікаційний код",
     "Inv. №": "Інв. №",
     "Inventory code": "Інвентарний код",
     "Location": "Розташування",
-    "Login": "Логін",
+    "Login": "Вхід",
     "Model": "Модель",
     "Modernization history": "Історія модернізації",
     "Movement history": "Історія переміщення",
-    "New": "Новий",
-    "New entry": "Новий запис",
+    "Name": "Ім'я",
     "Password": "Пароль",
-    "Registration": "Реєстрація",
+    "Register": "Реєстрація",
     "Remember me": "Запам'ятати мене",
     "Repair history": "Історія ремонту",
     "Result": "Результат",
     "Search by keywords": "Пошук за ключовими словами",
-    "Sign In": "Увійти",
-    "Sign Up": "Зареєструватися",
     "Type": "Тип",
-    "Welcome": "Ласкаво просимо",
     "Whoops! Something went wrong.": "Запит відхилено."
 }
