Insalled Doctrine Dbal lib. Modified LoginController and RegisterController. Register view does not require an e-mail.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -2,6 +2,7 @@
     "Characteristics": "Характеристики",
     "Cause": "Причина",
     "Comment": "Коментар",
+    "Confirm Password": "Підтвердження паролю",
     "Date": "Дата",
     "Devices": "Пристрої",
     "Ident. №": "Ідент. №",
