Fixed LoginController attemptLogin method. Created Device model, controller.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -11,6 +11,7 @@
     "Inventory code": "Інвентарний код",
     "Location": "Розташування",
     "Login": "Вхід",
+    "Logout": "Вихід",
     "Model": "Модель",
     "Modernization history": "Історія модернізації",
     "Movement history": "Історія переміщення",
