Added search input help prompt.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -5,6 +5,7 @@
     "Confirm Password": "Підтвердження паролю",
     "Date": "Дата",
     "Devices": "Пристрої",
+    "Enter for search. Esc for reset.": "Enter для пошуку. Esc для відміни.",
     "Hardware": "Апаратне забезпечення",
     "Ident. №": "Ідент. №",
     "Identification code": "Ідентифікаційний код",
