Device properties: satus select is replaced with disabled input.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -27,6 +27,7 @@
     "Search by keywords": "Пошук за ключовими словами",
     "Software": "Програмне забезпечення",
     "Status": "Статус",
+    "The status is autoupdated as a feedback on you actions (change workplace, sent to repair, etc.).": "Статус автоматично оновлюється як зворотній зв'язок на ваші дії (змінити робоче місце, відправити в ремонт тощо).",
     "Type": "Тип",
     "Updated": "Оновлено",
     "Whoops! Something went wrong.": "Запит відхилено."
