Devices brief info localization.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -6,6 +6,7 @@
     "Date": "Дата",
     "Devices": "Пристрої",
     "Enter for search. Esc for reset.": "Enter для пошуку. Esc для відміни.",
+    "General": "Загальні",
     "Hardware": "Апаратне забезпечення",
     "Ident. №": "Ідент. №",
     "Identification code": "Ідентифікаційний код",
@@ -15,14 +16,14 @@
     "Login": "Вхід",
     "Logout": "Вихід",
     "Model": "Модель",
-    "Modernization history": "Історія модернізації",
-    "Movement history": "Історія переміщення",
+    "Movements": "Переміщення",
     "Name": "Ім'я",
     "Password": "Пароль",
+    "Properties": "Властивості",
     "Register": "Реєстрація",
     "Rejected": "Відхилено",
+    "Repairs": "Ремонти",
     "Remember me": "Запам'ятати мене",
-    "Repair history": "Історія ремонту",
     "Result": "Результат",
     "Search by keywords": "Пошук за ключовими словами",
     "Software": "Програмне забезпечення",
