Created delete confirmation modal.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -4,20 +4,23 @@
     "Comment": "Коментар",
     "Confirm Password": "Підтвердження паролю",
     "Date": "Дата",
+    "Delete": "Видалення",
+    "device": "пристрій",
     "Devices": "Пристрої",
     "Enter for search. Esc for reset.": "Enter для пошуку. Esc для відміни.",
     "General": "Загальні",
     "Hardware": "Апаратне забезпечення",
     "Ident. №": "Ідент. №",
-    "Identification code": "Ідентифікаційний код",
+    "Identification code": "Ідентифікаційний номер",
     "Inv. №": "Інв. №",
-    "Inventory code": "Інвентарний код",
+    "Inventory code": "Інвентарний номер",
     "Location": "Розташування",
     "Login": "Вхід",
     "Logout": "Вихід",
     "Model": "Модель",
     "Movements": "Переміщення",
     "Name": "Ім'я",
+    "No": "Ні",
     "Password": "Пароль",
     "Properties": "Властивості",
     "Register": "Реєстрація",
@@ -31,5 +34,6 @@
     "The status is autoupdated as a feedback on you actions (change workplace, sent to repair, etc.).": "Статус автоматично оновлюється як зворотній зв'язок на ваші дії (змінити робоче місце, відправити в ремонт тощо).",
     "Type": "Тип",
     "Updated": "Оновлено",
-    "Whoops! Something went wrong.": "Запит відхилено."
+    "Whoops! Something went wrong.": "Запит відхилено.",
+    "Yes": "Так"
 }
