Works delete device movement confirmation.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -2,6 +2,7 @@
     "Brief Information": "Короткі відомості",
     "Cause": "Причина",
     "Comment": "Коментар",
+    "Confirm action.": "Підтвердьте дію",
     "Confirm Password": "Підтвердження паролю",
     "Date": "Дата",
     "Delete": "Видалення",
