Device movements properties: new record button is updated.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -21,6 +21,7 @@
     "Model": "Модель",
     "Movements": "Переміщення",
     "Name": "Ім'я",
+    "New record": "Новий запис",
     "No": "Ні",
     "Password": "Пароль",
     "Properties": "Властивості",
