page layout dark header. collapsed sidebar.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -15,6 +15,7 @@
     "Identification code": "Ідентифікаційний номер",
     "Inv. №": "Інв. №",
     "Inventory code": "Інвентарний номер",
+    "KCBP": "ПрАТ \"КЗТВ\"",
     "Location": "Розташування",
     "Login": "Вхід",
     "Logout": "Вихід",
