sidebar menu item component is created.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -1,5 +1,5 @@
 {
-    "Brief Information": "Короткі відомості",
+    "Brief info": "Короткі відомості",
     "Cause": "Причина",
     "Comment": "Коментар",
     "Confirm action.": "Підтвердьте дію",
