Created "add device" link button.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -20,7 +20,7 @@
     "Model": "Модель",
     "Movements": "Переміщення",
     "Name": "Ім'я",
-    "New record": "Новий запис",
+    "New device": "Новий пристрій",
     "No": "Ні",
     "Password": "Пароль",
     "Properties": "Властивості",
