movement table header localization.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -4,6 +4,7 @@
     "Comment": "Коментар",
     "Confirm Password": "Підтвердження паролю",
     "Date": "Дата",
+    "Device": "Пристрій",
     "Devices": "Пристрої",
     "Enter for search. Esc for reset.": "Enter для пошуку. Esc для відміни.",
     "General": "Загальні",
