movements page localization.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -21,6 +21,7 @@
     "Movements": "Переміщення",
     "Name": "Ім'я",
     "New device": "Новий пристрій",
+    "New movement": "Нове переміщення",
     "No": "Ні",
     "Password": "Пароль",
     "Properties": "Властивості",
