create device modal is created.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -7,7 +7,7 @@
     "Device": "Пристрій",
     "Devices": "Пристрої",
     "Enter for search. Esc for reset.": "Enter для пошуку. Esc для відміни.",
-    "General": "Загальні",
+    "General info": "Загальна інформація",
     "Hardware": "Апаратне забезпечення",
     "Ident. №": "Ідент. №",
     "Identification code": "Ідентифікаційний номер",
