Create device dialog: added great_mod checkbox on the hardware panel.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -9,6 +9,7 @@
     "Devices": "Пристрої",
     "Enter for search. Esc for reset.": "Enter для пошуку. Esc для відміни.",
     "General info": "Загальна інформація",
+    "Great modification": "Значні зміни",
     "Hardware": "Апаратне забезпечення",
     "Ident. №": "Ідент. №",
     "Identification code": "Ідентифікаційний номер",
