devices page variables renaming.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -8,6 +8,7 @@
     "Device": "Пристрій",
     "Devices": "Пристрої",
     "Enter for search. Esc for reset.": "Enter для пошуку. Esc для відміни.",
+    "Event": "Подія",
     "General info": "Загальна інформація",
     "Great modification": "Значні зміни",
     "Hardware": "Апаратне забезпечення",
@@ -20,6 +21,7 @@
     "Login": "Вхід",
     "Logout": "Вихід",
     "Model": "Модель",
+    "Move": "Перемістити",
     "Movements": "Переміщення",
     "Name": "Ім'я",
     "New device": "Новий пристрій",
