move device dialog localization, added cancel button.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -4,11 +4,12 @@
     "Comment": "Коментар",
     "Confirm Password": "Підтвердження паролю",
     "Date": "Дата",
+    "Delete": "Видалити",
     "Description": "Опис",
     "Device": "Пристрій",
     "Devices": "Пристрої",
+    "Edit": "Редагувати",
     "Enter for search. Esc for reset.": "Enter для пошуку. Esc для відміни.",
-    "Event": "Подія",
     "General info": "Загальна інформація",
     "Great modification": "Значні зміни",
     "Hardware": "Апаратне забезпечення",
@@ -36,6 +37,7 @@
     "Result": "Результат",
     "Search by keywords": "Пошук за ключовими словами",
     "Software": "Програмне забезпечення",
+    "Special actions": "Спеціальні дії",
     "Status": "Статус",
     "The status is autoupdated as a feedback on you actions (change workplace, sent to repair, etc.).": "Статус автоматично оновлюється як зворотній зв'язок на ваші дії (змінити робоче місце, відправити в ремонт тощо).",
     "Type": "Тип",
