added check if the location was changed.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -39,6 +39,7 @@
     "Software": "Програмне забезпечення",
     "Special actions": "Спеціальні дії",
     "Status": "Статус",
+    "The device is alrady has the specified location.": "Пристрій вже розташований у вказаному місці.",
     "The status is autoupdated as a feedback on you actions (change workplace, sent to repair, etc.).": "Статус автоматично оновлюється як зворотній зв'язок на ваші дії (змінити робоче місце, відправити в ремонт тощо).",
     "Type": "Тип",
     "Updated": "Оновлено",
