Context menu has "special actions - new hardware" option.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -26,7 +26,7 @@
     "Movements": "Переміщення",
     "Name": "Ім'я",
     "New device": "Новий пристрій",
-    "New movement": "Нове переміщення",
+    "New hardware": "Нове апаратне забезпечення",
     "No": "Ні",
     "Password": "Пароль",
     "Properties": "Властивості",
