context menu localization.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -22,11 +22,11 @@
     "Login": "Вхід",
     "Logout": "Вихід",
     "Model": "Модель",
-    "Move": "Перемістити",
     "Movements": "Переміщення",
     "Name": "Ім'я",
     "New device": "Новий пристрій",
     "New hardware": "Нове апаратне забезпечення",
+    "New movement": "Нове переміщення",
     "No": "Ні",
     "Password": "Пароль",
     "Properties": "Властивості",
@@ -37,7 +37,7 @@
     "Result": "Результат",
     "Search by keywords": "Пошук за ключовими словами",
     "Software": "Програмне забезпечення",
-    "Special actions": "Спеціальні дії",
+    "Special actions...": "Спеціальні дії...",
     "Status": "Статус",
     "The device is alrady has the specified location.": "Пристрій вже розташований у вказаному місці.",
     "The status is autoupdated as a feedback on you actions (change workplace, sent to repair, etc.).": "Статус автоматично оновлюється як зворотній зв'язок на ваші дії (змінити робоче місце, відправити в ремонт тощо).",
