Device CerateController->create() is created.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -27,6 +27,7 @@
     "New device": "Новий пристрій",
     "New hardware": "Нове апаратне забезпечення",
     "New movement": "Нове переміщення",
+    "New software": "Нове програмне забезпечення",
     "No": "Ні",
     "Password": "Пароль",
     "Properties": "Властивості",
