device edit dialog is updated. It is showed message if a device software does not exist.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -17,6 +17,7 @@
     "Identification code": "Ідентифікаційний номер",
     "Inv. №": "Інв. №",
     "Inventory code": "Інвентарний номер",
+    "It is no software exists for this device yet.": "Для цього пристрою ще не існує програмного забезпечення.",
     "KCBP": "ПрАТ \"КЗТВ\"",
     "Location": "Розташування",
     "Login": "Вхід",
